<resources>
    <string name="app_name">P02_Qohar</string>
    <string name="alamat_ampel_wuluhan_jember">Alamat : Ampel - Wuluhan - Jember</string>
    <string name="nim_18650051">NIM : 18650051</string>
    <string name="nama_abd_qohar_agus_maulana">Nama : ABD. Qohar Agus Maulana</string>
    <string name="no_hp_wa_082257888807">No HP / WA : 082257888807</string>
    <string name="created_by">Created By :</string>
    <string name="_18650051_abd_qohar_agus_maulana_ti_uin_malang">18650051_ABD. Qohar Agus Maulana_TI UIN MALANG</string>
</resources>